--- a/modeco/packages/confluent_cc/confluent_cc/confluent_cc.docker-compose.yml
+++ b/modeco/packages/confluent_cc/confluent_cc/confluent_cc.docker-compose.yml
@@ -3,11 +3,11 @@ version: '3'
 services:
 
 # START SERVICE confluent_cc.base
-  confluent_cc:
+  controlcenter:
     image: ${CONTECO_REGISTRY}${CONTECO_REALM_RUNTIME}/conteco.confluent_cc.base:5.4.0
-    environment: ['CONTROL_CENTER_BOOTSTRAP_SERVERS= kafka:9092','CONTROL_CENTER_ZOOKEEPER_CONNECT= zookeeper:2181','CONTROL_CENTER_CONNECT_CLUSTER= "kafka_connect:8083"','CONTROL_CENTER_KSQL_URL= "http://ksql_server:8088"','CONTROL_CENTER_KSQL_ADVERTISED_URL= "http://ksql_server:8088"','CONTROL_CENTER_SCHEMA_REGISTRY_URL= "http://schema_registry:8081"','CONTROL_CENTER_REPLICATION_FACTOR= 1','CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS= 1','CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS= 1','CONFLUENT_METRICS_TOPIC_REPLICATION= 1'${CONFLUENT_CC_LISTENERS}]
+    environment: ['CONTROL_CENTER_BOOTSTRAP_SERVERS=kafka:9092','CONTROL_CENTER_ZOOKEEPER_CONNECT=zookeeper:2181','CONTROL_CENTER_CONNECT_CLUSTER=${CONFLUENT_CC_KAFKA_CONNECT}','CONTROL_CENTER_KSQL_URL=${CONFLUENT_CC_KSQL_SERVER_URL}','CONTROL_CENTER_KSQL_ADVERTISED_URL=${CONFLUENT_CC_KSQL_SERVER_URL}','CONTROL_CENTER_SCHEMA_REGISTRY_URL=http://schema_registry:8081','CONTROL_CENTER_REPLICATION_FACTOR=1','CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS=1','CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS=1','CONFLUENT_METRICS_TOPIC_REPLICATION=1'${CONFLUENT_CC_LISTENERS}]
     command: []
-    volumes: ['package_confluent_cc_confluent_volume:/var/lib/kafka/data']
+    volumes: []
     ports: [${CONFLUENT_CC_PORTS}]
     networks: [package_overlay]
     deploy:
@@ -22,5 +22,5 @@ services:
       labels: []
 # END SERVICE confluent_cc.base
 
-volumes: {package_confluent_cc_confluent_volume: { external: true }}
+volumes: {}
 networks: {package_overlay: { external: true }}
