--- a/modeco/packages/confluent_cc/confluent_cc/confluent_cc.docker-compose.yml
+++ b/modeco/packages/confluent_cc/confluent_cc/confluent_cc.docker-compose.yml
@@ -12,6 +12,7 @@ services:
     networks: [package_overlay]
     deploy:
       mode: replicated
+      replicas: ${CONFLUENT_CC_DEPLOY_REPLICAS}
       resources:
         limits:
           cpus: '${CONFLUENT_CC_DEPLOY_RESOURCES_LIMITS_CPUS}'
@@ -19,7 +20,10 @@ services:
         reservations:
           cpus: '${CONFLUENT_CC_DEPLOY_RESOURCES_RESERVATIONS_CPUS}'
           memory: '${CONFLUENT_CC_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
+      placement:
+        constraints: [${CONFLUENT_CC_DEPLOY_PLACEMENT_CONSTRAINTS}]
       labels: []
+    labels: [${CONFLUENT_CC_LABELS}]
 # END SERVICE confluent_cc.base
 
 volumes: {}
