--- a/modeco/packages/confluent_cc/confluent_cc/confluent_cc_ui_controlcenter.docker-compose.yml
+++ b/modeco/packages/confluent_cc/confluent_cc/confluent_cc_ui_controlcenter.docker-compose.yml
@@ -12,6 +12,7 @@ services:
     networks: [modeco_overlay, package_overlay]
     deploy:
       mode: replicated
+      replicas: ${CONFLUENT_CC_UI_CONTROLCENTER_DEPLOY_REPLICAS}
       resources:
         limits:
           cpus: '${CONFLUENT_CC_UI_CONTROLCENTER_DEPLOY_RESOURCES_LIMITS_CPUS}'
@@ -19,7 +20,10 @@ services:
         reservations:
           cpus: '${CONFLUENT_CC_UI_CONTROLCENTER_DEPLOY_RESOURCES_RESERVATIONS_CPUS}'
           memory: '${CONFLUENT_CC_UI_CONTROLCENTER_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
+      placement:
+        constraints: [${CONFLUENT_CC_UI_CONTROLCENTER_DEPLOY_PLACEMENT_CONSTRAINTS}]
       labels: [traefik.enable=true,traefik.docker.network=modeco_overlay, traefik.http.services.package_confluent_cc_nginx.loadbalancer.server.port=80, traefik.http.routers.package_confluent_cc_nginx.entrypoints=conteco, traefik.http.routers.package_confluent_cc_nginx.rule=PathPrefix("/package/confluent_cc/controlcenter")]
+    labels: [${CONFLUENT_CC_UI_CONTROLCENTER_LABELS}]
 # END SERVICE nginx.rewrite
 
 volumes: {}
