--- a/modeco/packages/confluent_cc/confluent_cc/confluent_cc_ui_controlcenter.docker-compose.yml
+++ b/modeco/packages/confluent_cc/confluent_cc/confluent_cc_ui_controlcenter.docker-compose.yml
@@ -12,7 +12,7 @@ services:
     networks: [modeco_overlay, package_overlay]
     deploy:
       mode: replicated
-      replicas: ${CONFLUENT_CC_UI_CONTROLCENTER_DEPLOY_REPLICAS}
+      ${CONFLUENT_CC_UI_CONTROLCENTER_DEPLOY_MODE_REPLICATED_REPLICAS}
       resources:
         limits:
           cpus: '${CONFLUENT_CC_UI_CONTROLCENTER_DEPLOY_RESOURCES_LIMITS_CPUS}'
